# level2-radar-macos

./: .gitignore  Cargo.toml  README.md  install.sh  package.sh
.github/workflows/: release-macos.yml
backend/gateway/: README.md
backend/model-prep/: README.md
crates/ffi/: Cargo.toml
crates/ffi/include/: met_engine_ffi.h
crates/ffi/src/: lib.rs
crates/met-engine/: Cargo.toml
crates/met-engine/src/: lib.rs
crates/model-client/: Cargo.toml
crates/model-client/src/: lib.rs
crates/nexrad-l2/: Cargo.toml
crates/nexrad-l2/src/: lib.rs
crates/plot-bridge/: Cargo.toml
crates/plot-bridge/src/: lib.rs
crates/radar-domain/: Cargo.toml
crates/radar-domain/src/: lib.rs
crates/radar-pack/: Cargo.toml
crates/radar-pack/src/: lib.rs
crates/sounding-engine/: Cargo.toml
crates/sounding-engine/src/: lib.rs
docs/: cursdar2-v020-port-map.md  iphone-radar-architecture.md
docs/app-store/: app-store-connect-copy.md  privacy-policy-template.md  review-notes.md  submission-checklist.md  support-page-template.md
ios/: project.yml
ios/macdar.xcodeproj/: project.pbxproj
ios/macdar/App/: AppOrchestrator.swift  AppState.swift
ios/macdar/Bridge/: MetEngineBridge.h  (+4 more)
scripts/: archive-ios-release.sh  build-ios-rust.sh  compare-parser-parity.sh
shared/schemas/: frame_snapshot.schema.json
src/: app.cpp  app.h  historic.cpp
src/metal/: MetalRenderer.h  MetalRenderer.mm  metal_common.h  renderer.metal  volume3d.metal
src/net/: warnings.cpp  warnings.h
src/nexrad/: level2_parser.cpp  level2_parser.h
src/ui/: ui.cpp
tools/: stage_probe.cpp
(+11 files in other folders)
