[workspace]
members = [
    "crates/ffi",
    "crates/met-engine",
    "crates/model-client",
    "crates/nexrad-l2",
    "crates/plot-bridge",
    "crates/radar-domain",
    "crates/radar-pack",
    "crates/sounding-engine",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
