[package]
name = "met-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
model-client = { path = "../model-client" }
nexrad-l2 = { path = "../nexrad-l2" }
plot-bridge = { path = "../plot-bridge" }
radar-domain = { path = "../radar-domain" }
radar-pack = { path = "../radar-pack" }
sounding-engine = { path = "../sounding-engine" }
thiserror.workspace = true
